<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_addNew">Add New</string>
    <string name="assignments">Assignments</string>
    <string name="title_activity_add_new">New Assignment</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="assignment_type">Assignment Type</string>
    <string name="assignment_class">Class</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="additional_info">Additional Info</string>
    <string name="add_class">Add a new class</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_calendar_simple">Calendar</string>
    <string name="title_activity_gpa_calculator">GpaCalculator</string>
    <string name="title_activity_january">January</string>
    <string name="title_activity_february">February</string>
    <string name="title_activity_day_plan">Day Plan</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_day_planner">Day Planner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Calendar">Calendar</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_free_time">FreeTime</string>
    <string name="ChooseTime">Choose a Time</string>
    <string name="Spinner1">Monday</string>
    <string name="Spinner2">Tuesday</string>
    <string name="Spinner3">Wednesday</string>
    <string name="Spinner4">Thursday</string>
    <string name="Spinner5">Friday</string>
    <string name="Spinner6">Saturday</string>
    <string name="Spinner7">Sunday</string>
    <string name="title_activity_yad_view">YadView</string>
    <string name="title_activity_simple_day_view">SimpleDayView</string>
    <string name="action_accept">Accept</string>
    <string name="details">Details</string>
    <string name="due">Due:</string>
    <string name="class_label">Class:</string>
    <string name="title_activity_classes">ClassesActivity</string>
    <string name="title_activity_add_new_class">AddNewClassActivity</string>
    <string name="class_name">Class Name</string>
    <string name="days_of_the_week">Days of the Week</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_main_profile">MainProfile</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_add_new_assignment">New Assignment</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_class_details">ClassDetailsActivity</string>
    <string name="title_activity_today">TodayActivity</string>

</resources>
